--- a/TransactionKernelDSL.Language/Dsl/GeneratedCode/DomainModelResx.resx
+++ b/TransactionKernelDSL.Language/Dsl/GeneratedCode/DomainModelResx.resx
@@ -1549,6 +1549,14 @@
     <value>Description for TransactionKernelDSL.Framework.Language.ParserType.Xml</value>
     <comment>Description for EnumerationLiteral &apos;Xml&apos; on DomainEnumeration &apos;ParserType&apos;</comment>
   </data>
+  <data name="TransactionKernelDSL.Framework.Language.ParserType/Iso8583_1993.DisplayName" xml:space="preserve">
+    <value>Iso8583_1993</value>
+    <comment>Display name for EnumerationLiteral &apos;Iso8583_1993&apos; on DomainEnumeration &apos;ParserType&apos;</comment>
+  </data>
+  <data name="TransactionKernelDSL.Framework.Language.ParserType/Iso8583_1993.Description" xml:space="preserve">
+    <value>Description for TransactionKernelDSL.Framework.Language.ParserType.Iso8583_1993</value>
+    <comment>Description for EnumerationLiteral &apos;Iso8583_1993&apos; on DomainEnumeration &apos;ParserType&apos;</comment>
+  </data>
   <data name="TransactionKernelDSL.Framework.Language.DataSourceSupportType/NotTyped.DisplayName" xml:space="preserve">
     <value>NotTyped</value>
     <comment>Display name for EnumerationLiteral &apos;NotTyped&apos; on DomainEnumeration &apos;DataSourceSupportType&apos;</comment>
